# osprey_ros

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: docker_build.yml
config/: robot24_controllers.yaml  robot_controllers.yaml  slam_toolbox.yaml
description/: colors.xacro  gazebo_plugins.xacro  inertial_macros.xacro  robot.urdf.xacro  robot24_core.xacro  robot24_ros2_control.xacro  robot_core.xacro  ros2_control.xacro
etc/systemd/system/: ros2_osprey_gamepad.path  ros2_osprey_gamepad.service  ros2_osprey_ros.service
etc/udev/rules.d/: 95-osprey_gamepad.rules
include/: autonomy.hpp  gpio.hpp  gpio_controller.hpp  joint.hpp  remapper.hpp  robot.hpp  robot24.hpp  robot24_hardware_interface.hpp  robot_hardware_interface.hpp  segment.hpp  teleop_manual_joy.hpp  usb.hpp
launch2/: gamepad.launch.py  gazebo.launch.py  ign_gazebo.launch.py  osprey_ros.launch.py
meshes/: bucket_ladder_gears.dae  bucket_ladder_guide_frame.dae  dump_bucket_body.dae  wheel.dae
meshes/robot24/: bucket.dae  chassis.dae  exc_dep_frame.dae  wheel.dae
meshes/rocks/: rock1.dae  rock2.dae  rock3.dae  rock4.dae  rock5.dae  rock7.dae
plugins/: gpio_controller.xml  robot24_hardware_interface.xml  robot_hardware_interface.xml
sim/: robot.rviz
src/: autonomy.cpp  autonomy_node.cpp  gpio.cpp  gpio_controller.cpp  gz_random_rocks.cpp  joint.cpp  remapper.cpp  remapper_node.cpp  robot.cpp  robot24.cpp  robot24_hardware_interface.cpp  robot_hardware_interface.cpp  teleop_manual_joy.cpp  teleop_manual_joy_node.cpp  test-usb-motors.cpp  usb.cpp
src/tests/: test-gpio-limit-switches.cpp  test-gpio-relays.cpp  test-usb-motors24.cpp
worlds/: artemis_arena.world
worlds/models/artemis_arena/: model.config  model.material  model.sdf
worlds/models/fiduciary/: model.config  model.sdf
